change package name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "alexjpaz-habits-singing",
-    "slug": "alexjpaz-habits-singing",
+    "name": "tuneup",
+    "slug": "tuneup",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
