--- a/drills/package.json
+++ b/drills/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-      "midi-writer-js": "^2.1.4",
-      "tonal": "^4.14.0"
+  "dependencies": {},
+  "devDependencies": {
+    "midi-writer-js": "^2.1.4",
+    "tonal": "^4.14.0"
   }
 }
