--- a/drills/package.json
+++ b/drills/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-      "build": "node src/index.js && cp output/manifest.js ../web/src/database.json"
+    "build": "node src/index.js && cp output/manifest.js ../web/src/database.json",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
+    "jest": "^29.5.0",
     "midi-writer-js": "^2.1.4",
     "tonal": "^4.14.0"
   }
