skip build for now

--- a/.github/workflows/pr-drills.yml
+++ b/.github/workflows/pr-drills.yml
@@ -22,5 +22,6 @@ jobs:
         working-directory: ./drills
 
       - name: 🥕 Build project
+        if: false
         run: yarn build
         working-directory: ./drills
