changing job name

--- a/.github/workflows/pr-drills.yml
+++ b/.github/workflows/pr-drills.yml
@@ -1,7 +1,7 @@
 name: "Test Drills"
 on: push
 jobs:
-  preview:
+  test-and-build:
     runs-on: ubuntu-latest
     steps:
       - name: 🏗 Setup repo
