--- a/drills/package.json
+++ b/drills/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "node src/index.js && cp output/manifest.js ../web/src/database.json",
+    "build": "node src/index.js",
+    "build:copy": "npm run build && cp output/manifest.js ../web/src/database.json",
     "test": "jest"
   },
   "dependencies": {},
