Adding all new drills and scales (#14)
* refactoring and adding bubble warmup

* Adding a test suite for drills and common utilities

* Adding a test workflow for drills

* configure for all push events

* remove EAS

* use working directory

* skip build for now

* changing job name

* Chaning build so we can test in CI

* Adding unison

* refactoring drills

* fixing unison test

* Adding octave swing

* Adding more ranges and fixing scales

* extracitng common utils

* bubble

* acsending and descending

* stash

* stash

* refactoring

* cleanup

* refactoring

* stash

* Stash base scale

* Refactoring and adding tests

* octave triple

* Final scales for now

--- a/drills/package.json
+++ b/drills/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-      "build": "node index.js && cp output/manifest.js ../web/src/database.json"
+    "build": "node src/index.js",
+    "build:copy": "npm run build && cp output/manifest.js ../web/src/database.json",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
+    "jest": "^29.5.0",
     "midi-writer-js": "^2.1.4",
     "tonal": "^4.14.0"
   }
